--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2290,7 +2290,7 @@ textarea.w-select {
 }
 
 .hero-section {
-  background-image: linear-gradient(90deg, #070708, rgba(252, 252, 252, .1)), url("../images/bg/img3.jpg");
+  background-image: linear-gradient(90deg, #070708, rgba(252, 252, 252, .1)), url("../images/bg/img3.webp");
   background-position: 0 0, 0 100%;
   background-repeat: repeat, no-repeat;
   background-size: auto, cover;
@@ -2542,7 +2542,7 @@ textarea.w-select {
 
 .about-image-inner-wrapper {
   z-index: 2;
-  background-image: url("../images/trainer/20.jpg");
+  background-image: url("../images/trainer/20.webp");
   background-position: 40%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -2760,30 +2760,30 @@ textarea.w-select {
 }
 
 .service-image.service-image-one {
-  background-image: url("../images/course/1.jpg");
+  background-image: url("../images/course/1.webp");
   background-position: 50% 100%;
   max-width: 600px;
 }
 
 .service-image.service-image-two {
-  background-image: url("../images/course/6.jpg");
+  background-image: url("../images/course/6.webp");
   background-position: 50% 100%;
   max-width: 600px;
 }
 
 .service-image.service-image-three {
-  background-image: url("../images/course/4.jpg");
+  background-image: url("../images/course/4.webp");
   background-position: 50% 100%;
   max-width: 600px;
 }
 
 .service-image.service-image-four {
-  background-image: url("../images/course/5.jpg");
+  background-image: url("../images/course/5.webp");
   max-width: 600px;
 }
 
 .service-image.service-image-five {
-  background-image: url("../images/course/8.jpg");
+  background-image: url("../images/course/8.webp");
   max-width: 600px;
 }
 
@@ -2916,7 +2916,7 @@ textarea.w-select {
 
 .location-image-inner-wrapper {
   z-index: 2;
-  background-image: url("../images/trainer/1.jpg");
+  background-image: url("../images/trainer/1.webp");
   background-position: 0 80%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -3073,7 +3073,7 @@ textarea.w-select {
 
 .choose-image-wrapper {
   z-index: 1;
-  background-image: url("../images/trainer/18.jpg");
+  background-image: url("../images/trainer/18.webp");
   background-position: 50% 0;
   background-repeat: no-repeat;
   background-size: cover;
@@ -3303,7 +3303,7 @@ textarea.w-select {
 
 .slider-image-inner-wrapper {
   z-index: 2;
-  background-image: url("../images/testimonials/1.jpg");
+  background-image: url("../images/testimonials/1.webp");
   background-position: 40%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -3319,12 +3319,12 @@ textarea.w-select {
 }
 
 .slider-image-inner-wrapper.slider-image-2 {
-  background-image: url("../images/testimonials/2.jpg");
+  background-image: url("../images/testimonials/2.webp");
   background-position: 50% 80%;
 }
 
 .slider-image-inner-wrapper.slider-image-3 {
-  background-image: url("../images/testimonials/3.jpg");
+  background-image: url("../images/testimonials/3.webp");
   background-position: 50%;
 }
 
@@ -6155,11 +6155,11 @@ label {
 }
 
 .accordion-button::after {
-  background-image: url('../images/icons/arrow-down.svg');
+  background-image: url('../images/icons/arrow-down.webp');
 }
 
 .accordion-button:not(.collapsed)::after {
-  background-image: url('../images/icons/arrow-up.svg');
+  background-image: url('../images/icons/arrow-up.webp');
   transform: rotate(0deg);
 }
 
